added garbage collection sections